--- a/Server/ThreatDetectorServer/pom.xml
+++ b/Server/ThreatDetectorServer/pom.xml
@@ -3,21 +3,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ac.cr.tec</groupId>
-    <artifactId>ThreadDetectorServer</artifactId>
+    <artifactId>ThreatDetectorServer</artifactId>
     <version>1-ALPHA</version>
     <packaging>jar</packaging>
 
-    <name>Spring Boot Blank Project (from https://github.com/making/spring-boot-blank)</name>
+    <name>ThreatDetectorServer</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.2.7.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>tds.App</start-class>
+        <start-class>ac.cr.tec.tds.App</start-class>
         <java.version>1.8</java.version>
         <lombok.version>1.14.8</lombok.version>
         <log4jdbc.log4j2.version>1.16</log4jdbc.log4j2.version>
