#1:Create DB and add schema: Add dependency for Common Packages
Add dependency and compile action for common packages, pom.xml

--- a/Server/ThreatDetectorServer/pom.xml
+++ b/Server/ThreatDetectorServer/pom.xml
@@ -61,6 +61,12 @@
             <version>${rest.assured.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ac.cr.tec</groupId>
+            <artifactId>ThreatDetectorCommon</artifactId>
+            <version>1.0-ALPHA</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
