#1:Create DB and add schema: Add dependency packages
Add dependency packages for correct compilation, pom.xml

--- a/Server/ThreatDetectorCommon/pom.xml
+++ b/Server/ThreatDetectorCommon/pom.xml
@@ -17,6 +17,36 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!-- Dotenv library  -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>3.1.6</version>
+        </dependency>
+        <!-- CouchDB connector library-->
+        <dependency>
+            <groupId>org.ektorp</groupId>
+            <artifactId>org.ektorp</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
